finsihed the withdrwals page

--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -39,7 +39,7 @@
                                 Ethereum Address
                             </td>
                             <td class="fw-bolder text-end">
-                                <p>K53BU87JGEV6D8EK53BU87JGEV6D8E</p>
+                                K53BU87JGEV6D8EK53BU87JGEV6D8E
                             </td>
                         </tr>
 
@@ -48,7 +48,7 @@
                                 Bitcoin Address
                             </td>
                             <td class="fw-bolder text-end">
-                                <p>TDHIBFGD6B3ND16K53BU87JGEV6D8E</p>
+                                DHIBFGD6B3ND16K53BU87JGEV6D8E
                             </td>
                         </tr>
 
@@ -57,7 +57,7 @@
                                 USDT Address
                             </td>
                             <td class="fw-bolder text-end">
-                                <p>TDHIBFGD6B3ND16K53BU87JGEV6D8E</p>
+                                TDHIBFGD6B3ND16K53BU87JGEV6D8E
                             </td>
                         </tr>
                     </table>
