--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -137,9 +137,7 @@
                     <a 
                         class="nav-link" 
                         id="tab-profile" 
-                        data-bs-toggle="pill" 
-                        href="#content-profile" 
-                        role="tab" 
+                        href="{% url 'account_logout' %}" 
                         aria-controls="content-profile" 
                         aria-selected="false"
                     >
@@ -164,15 +162,6 @@
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                       <a class="nav-link" href="#">Link 1</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link 2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
                     </li>
                   </ul>
                 </div>
