display dynamic values

--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -70,7 +70,7 @@
                                     Full Name
                                 </td>
                                 <td class="text-end">
-                                    <b>John Doe</b>
+                                    <b>{{user.first_name}} {{user.last_name}}</b>
                                 </td>
                             </tr>
 
