--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -161,7 +161,18 @@
                 <div class="collapse navbar-collapse" id="navbarContent">
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Link 1</a>
+                        <div class="dropdown">
+                          <a class="btn btn-outline-success dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Welcome, {{user.username }}
+                          </a>
+                        
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li>
+                              <a class="dropdown-item text-danger" href="{% url 'account_logout' %}">Logout</a>
+                            </li>
+                          </ul>
+                        </div>
                     </li>
                   </ul>
                 </div>
