--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -7,7 +7,7 @@
                         <i class="bi bi-graph-up-arrow"></i>
                         <div class="ps-4">
                             <p>Total Investment</p>
-                            <p><b>15</b></p>
+                            <p><b>{{total_investments}}</b></p>
                         </div>
                     </a>
                 </di>
@@ -16,7 +16,7 @@
                         <i class="bi bi-briefcase"></i>
                         <div class="ps-4">
                             <p>Active Plans</p>
-                            <p><b>15</b></p>
+                            <p><b>{{total_plans}}</b></p>
                         </div>
                     </a>
                 </div>
@@ -115,6 +115,7 @@
                             data-aos-delay="100"
                             class="row m-1 border p-4 bg-light"
                         >
+                        {% for user_investment in user_investments %}
                             <div class="col-12 col-md-5 col-lg-6">
                                 <img 
                                     src="{% static '/images/oil_gas.jpg' %}" 
@@ -123,7 +124,8 @@
                                     style="object-fit: cover; height: 100%; width: 100%;"
                                 >
                             </div>
-                            <div class="col-12 col-md-6 col-lg-6 p-3">
+                            
+                            <div class="col-12 col-lg-6 p-3">
                                 <table class="table table-borderless" style="background: transparent !important;">
                                     <tr>
                                         <td>
@@ -171,7 +173,13 @@
                                     </tr>
                                 </table>
                             </div>
-                    </div>
+                        </div>
+                        {% empty %}
+                            <div>
+                                <p class="alert alert-info">No Investments yet</p>
+
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
             </section>
