--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -35,7 +35,7 @@
                         <i class="bi bi-people"></i>
                         <div class="ps-4">
                             <p>Total Referrals</p>
-                            <p><b>0</b></p>
+                            <p><b>{{total_referrals}}</b></p>
                         </div>
                     </a>
                 </div>
@@ -45,7 +45,7 @@
                         <i class="bi bi-wallet2"></i>
                         <div class="ps-4">
                             <p>Withdrawals Amount</p>
-                            <p><b>{{withdrawals_amount}}</b></p>
+                            <p><b>{{total-referrals}}</b></p>
                         </div>
                     </a>
                 </div>
@@ -55,7 +55,7 @@
                         <i class="bi bi-currency-bitcoin"></i>
                         <div class="ps-4">
                             <p>Referrals Earnings</p>
-                            <p><b>15</b></p>
+                            <p><b>{{total_bonuses}}</b></p>
                         </div>
                     </a>
                 </div>
