--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -45,7 +45,7 @@
                         <i class="bi bi-wallet2"></i>
                         <div class="ps-4">
                             <p>Withdrawals Amount</p>
-                            <p><b>{{total-referrals}}</b></p>
+                            <p><b>{{total_referrals}}</b></p>
                         </div>
                     </a>
                 </div>
