Referrals first commit

--- a/users/templates/users/referrals_tab.html
+++ b/users/templates/users/referrals_tab.html
@@ -1,6 +1,40 @@
 {% load static %}
 <section>
     <div class="container">
-        <h1>Referrals Tabs</h1>
+        <article class="row">
+            <div class="col-12 col-md-4">
+                <div class="d-flex">
+                    <i class="bi bi-upc-scan"></i>
+                    <div class="ps-4">
+                        <p>Referrals Code</p>
+                        <p class="fw-bolder">
+                            1234567
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="d-flex">
+                    <i class="bi bi-people"></i>
+                    <div class="ps-4">
+                        <p>Total Referred</p>
+                        <p class="fw-bolder">
+                            12
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="d-flex">
+                    <i class="bi bi-currency-dollar"></i>
+                    <div class="ps-4">
+                        <p>Referral Bonuses</p>
+                        <p>
+                            $40500.00
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </article>
     </div>
 </section>
