--- a/users/templates/users/referrals_tab.html
+++ b/users/templates/users/referrals_tab.html
@@ -1,9 +1,9 @@
 {% load static %}
-<section>
+<section id="referral">
     <div class="container">
         <article class="row">
             <div class="col-12 col-md-4">
-                <div class="d-flex">
+                <div class="d-flex summary">
                     <i class="bi bi-upc-scan"></i>
                     <div class="ps-4">
                         <p>Referrals Code</p>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div class="d-flex">
+                <div class="d-flex summary">
                     <i class="bi bi-people"></i>
                     <div class="ps-4">
                         <p>Total Referred</p>
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div class="d-flex">
+                <div class="d-flex summary">
                     <i class="bi bi-currency-dollar"></i>
                     <div class="ps-4">
                         <p>Referral Bonuses</p>
