Styling for page

--- a/users/static/users/css/client.css
+++ b/users/static/users/css/client.css
@@ -75,3 +75,15 @@
     background: transparent !important;
 }
 
+
+#referral .summary{
+    background-color: #FFF;
+    padding: 10px 10px;
+    border: 1px solid var(--secondary-color);
+}
+
+#referral .bi{
+    color: #32CD32;
+    font-size: 1.7rem;
+}
+
