referral details returned from db

--- a/users/templates/users/referrals_tab.html
+++ b/users/templates/users/referrals_tab.html
@@ -17,7 +17,7 @@
                     <div class="ps-4">
                         <p>Referrals Code</p>
                         <p class="fw-bolder">
-                            1234567
+                            {{user.profiles.referral_code}}
                         </p>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="ps-4">
                         <p>Total Referred</p>
                         <p class="fw-bolder">
-                            12
+                            {{total_referrals}}
                         </p>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                     <div class="ps-4">
                         <p>Referral Bonuses</p>
                         <p>
-                            $40500.00
+                            <sup>$</sup>{{total_bonuses}}
                         </p>
                     </div>
                 </div>
