--- a/users/templates/users/profile_tab.html
+++ b/users/templates/users/profile_tab.html
@@ -1,6 +1,9 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <section>
     <div class="container">
         <h1>Profile Tabs</h1>
+
+        {{ user_form|crispy }}
     </div>
 </section>
