--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -38,170 +38,183 @@
 </head>
 <body>
     
-    <div class="container-fluid">
-        <div class="row">
-          <!-- Sidebar -->
-          <nav class="col-md-3 col-lg-2 d-md-block sidebar">
-            <div class="position-fixed">
-                <!-- Navbar Brand -->
-                <a class="navbar-brand text-center" href="/">
-                    <img
-                    src="{% static 'images/logo.PNG' %}"
-                    alt="Riaz Wealth"    
-                    style="margin: auto; height: 100px; width: 100%; object-fit: cover;"
-                    class="d-inline-block align-center img-fluid"
-                    />
-                </a>
-              {% block sidebar %}
-              <ul class="nav flex-column nav-pills mt-4" id="sidebarTabs" role="tablist">
-                <li class="nav-item">
-                    <a 
-                        class="nav-link active" 
-                        id="tab-home" 
-                        data-bs-toggle="pill" 
-                        href="#content-dashboard" 
-                        role="tab" 
-                        aria-controls="content-home" 
-                        aria-selected="true"
-                    >
-                        <i class=" bi bi-house-door-fill" style="font-size: 1.2em;"></i>
-                        Dashboard
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                        class="nav-link" 
-                        id="tab-investments" 
-                        data-bs-toggle="pill" 
-                        href="#content-investment" 
-                        role="tab" 
-                        aria-controls="content-investments" 
-                        aria-selected="false"
-                    >
-                        <i class=" bi bi-graph-up-arrow"></i>
-                        Investments
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                        class="nav-link" 
-                        id="tab-withdrawals" 
-                        data-bs-toggle="pill" 
-                        href="#content-withdrawals" 
-                        role="tab" 
-                        aria-controls="content-withdrawals" 
-                        aria-selected="false"
-                    >
-                        <i class=" bi bi-briefcase-fill" style="font-size: 1.2em;"></i>
-                        Withdrawals
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                        class="nav-link" 
-                        id="tab-referrals" 
-                        data-bs-toggle="pill" 
-                        href="#content-referrals" 
-                        role="tab" 
-                        aria-controls="content-referrals" 
-                        aria-selected="false"
-                    >
-                        <i class="bi bi-people-fill"></i>
-                        Referrals
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                        class="nav-link" 
-                        id="tab-profile" 
-                        data-bs-toggle="pill" 
-                        href="#content-profile" 
-                        role="tab" 
-                        aria-controls="content-profile" 
-                        aria-selected="false"
-                    >
-                        <i class="bi bi-person-circle"></i>
-                        Profile & Settings
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                        class="nav-link" 
-                        id="tab-faq" 
-                        data-bs-toggle="pill" 
-                        href="#content-faq" 
-                        role="tab" 
-                        aria-controls="content-faq" 
-                        aria-selected="false"
-                    >
-                        <i class="bi bi-question-circle-fill"></i>
-                        FAQ
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                        class="nav-link" 
-                        id="tab-profile" 
-                        href="{% url 'account_logout' %}" 
-                        aria-controls="content-profile" 
-                        aria-selected="false"
-                    >
-                        Logout
-                    </a>
-                </li>
-              </ul>
-              {% endblock %}
-            </div>
-          </nav>
-    
-          <!-- Main Content -->
-          <div class="col-md-9 me-auto col-lg-10 p-0">
-            <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg" style="background: #F5F5F5">
-              <div class="container-fluid">
-                <a class="navbar-brand" href="#">Dashboard</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarContent">
-                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <div class="dropdown">
-                          <a class="btn btn-outline-success dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Welcome, {{user.username }}
-                          </a>
-                        
-                          <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li>
-                              <a class="dropdown-item text-danger" href="{% url 'account_logout' %}">Logout</a>
-                            </li>
-                          </ul>
-                        </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
+    <div class="d-flex">
+      <div 
+        class="sidebar d-md-flex flex-column vh-100" 
+        id="responsiveSidebar"
+      >
+        <div class="sidebar-header d-md-none">
+          <h5 id="sidebarLabel">Menu</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
 
-            <!-- Alertify JavaScript -->
-            <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
-    
-            <!-- Main Content Area -->
-            <div class="tab-content p-5" id="sidebarTabsContent">
-                {% for message in messages %}
-                  <script>
-                          alertify.set('notifier','position', 'top-right');
-                          alertify.{{message.tags}}('{{message}}');
-                  </script>    
-              {% endfor %}
-
-              {% block content %}
-              {% endblock %}
-            </div>
-          </div>
+        <div class="sidebar-body">
+          <!-- Navbar Brand -->
+          <a class="navbar-brand text-center" href="/">
+              <img
+              src="{% static 'images/logo.PNG' %}"
+              alt="Riaz Wealth"    
+              style="margin: auto; height: 100px; width: 100%; object-fit: cover;"
+              class="d-inline-block align-center img-fluid"
+              />
+          </a>
+          {% block sidebar %}
+          <ul class="nav flex-column nav-pills mt-4" id="sidebarTabs" role="tablist">
+            <li class="nav-item">
+              <a 
+                  class="nav-link active" 
+                  id="tab-home" 
+                  data-bs-toggle="pill" 
+                  href="#content-dashboard" 
+                  role="tab" 
+                  aria-controls="content-home" 
+                  aria-selected="true"
+              >
+                  <i class=" bi bi-house-door-fill" style="font-size: 1.2em;"></i>
+                  Dashboard
+              </a>
+            </li>
+            <li class="nav-item">
+              <a 
+                  class="nav-link" 
+                  id="tab-investments" 
+                  data-bs-toggle="pill" 
+                  href="#content-investment" 
+                  role="tab" 
+                  aria-controls="content-investments" 
+                  aria-selected="false"
+              >
+                  <i class=" bi bi-graph-up-arrow"></i>
+                  Investments
+              </a>
+            </li>
+            <li class="nav-item">
+              <a 
+                  class="nav-link" 
+                  id="tab-withdrawals" 
+                  data-bs-toggle="pill" 
+                  href="#content-withdrawals" 
+                  role="tab" 
+                  aria-controls="content-withdrawals" 
+                  aria-selected="false"
+              >
+                  <i class=" bi bi-briefcase-fill" style="font-size: 1.2em;"></i>
+                  Withdrawals
+              </a>
+            </li>
+            <li class="nav-item">
+              <a 
+                  class="nav-link" 
+                  id="tab-referrals" 
+                  data-bs-toggle="pill" 
+                  href="#content-referrals" 
+                  role="tab" 
+                  aria-controls="content-referrals" 
+                  aria-selected="false"
+              >
+                  <i class="bi bi-people-fill"></i>
+                  Referrals
+              </a>
+            </li>
+            <li class="nav-item">
+              <a 
+                  class="nav-link" 
+                  id="tab-profile" 
+                  data-bs-toggle="pill" 
+                  href="#content-profile" 
+                  role="tab" 
+                  aria-controls="content-profile" 
+                  aria-selected="false"
+              >
+                  <i class="bi bi-person-circle"></i>
+                  Profile & Settings
+              </a>
+            </li>
+            <li class="nav-item">
+              <a 
+                  class="nav-link" 
+                  id="tab-faq" 
+                  data-bs-toggle="pill" 
+                  href="#content-faq" 
+                  role="tab" 
+                  aria-controls="content-faq" 
+                  aria-selected="false"
+              >
+                  <i class="bi bi-question-circle-fill"></i>
+                  FAQ
+              </a>
+            </li>
+            <li class="nav-item">
+              <a 
+                  class="nav-link" 
+                  id="tab-profile" 
+                  href="{% url 'account_logout' %}" 
+                  aria-controls="content-profile" 
+                  aria-selected="false"
+              >
+                  Logout
+              </a>
+            </li>
+          </ul>
+          {% endblock %}
         </div>
       </div>
+    
+      <!-- Main Content -->
+      <div class="main-content flex-grow-1">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg" style="background: #F5F5F5">
+          <div class="container-fluid">
+            <!-- Sidebar Off-Canvas -->
+              <button 
+                class="btn btn-primary" 
+                type="button" 
+                onclick="toggleSidebar()"
+              >
+              Menu
+            </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <div class="dropdown">
+                      <a class="btn btn-outline-success dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Welcome, {{user.username }}
+                      </a>
+                    
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li>
+                          <a class="dropdown-item text-danger" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                      </ul>
+                    </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+        <!-- Alertify JavaScript -->
+        <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
+
+        <!-- Main Content Area -->
+        <div class="tab-content p-5" id="sidebarTabsContent">
+            {% for message in messages %}
+              <script>
+                      alertify.set('notifier','position', 'top-right');
+                      alertify.{{message.tags}}('{{message}}');
+              </script>    
+          {% endfor %}
+
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div> <!-- end of content -->
+  </div>
+
 
     
      
@@ -214,11 +227,29 @@
  <script src="{% static 'js/main.js' %}"></script>
  <!-- Box icon js -->
  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
- <script src="{% static 'js/jquery.min.js' %}"></script>
+ <!-- <script src="{% static 'js/jquery.min.js' %}"></script>
  <script src="{% static 'js/jquery.validate.min.js' %}"></script>
- <script src="{% static 'js/deposit_validation.js' %}"></script>
+ <script src="{% static 'js/deposit_validation.js' %}"></script> -->
 
- 
+ <!-- Include Custom JS -->
+<script>
+  function toggleSidebar() {
+      const sidebar = document.getElementById('responsiveSidebar');
+      sidebar.classList.toggle('show'); // Toggle sidebar visibility
+  }
+
+  // Close sidebar if click occurs outside the sidebar
+  document.addEventListener('click', function(event) {
+      const sidebar = document.getElementById('responsiveSidebar');
+      const toggleButton = document.querySelector('.btn.btn-primary');
+      
+      // Close sidebar if click is outside the sidebar and toggle button
+      if (!sidebar.contains(event.target) && !toggleButton.contains(event.target)) {
+          sidebar.classList.remove('show');
+      }
+  });
+</script>
+
  <script>
   function copyRef() {
       /** javascript code for click copy **/
