adjusted the toggle

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -166,17 +166,17 @@
         <nav class="navbar navbar-expand-lg" style="background: #F5F5F5">
           <div class="container-fluid">
             <!-- Sidebar Off-Canvas -->
-              <button 
-                class="btn btn-primary" 
-                type="button" 
-                onclick="toggleSidebar()"
-              >
-              Menu
+            <button 
+              class="btn btn-primary" 
+              type="button" 
+              onclick="toggleSidebar()"
+            >
+              <span class="bi bi-list text-white" style="font-size: 20px;"></span>
             </button>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
+            </button> -->
+            <!-- <div class="collapse navbar-collapse" id="navbarContent"> -->
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <div class="dropdown">
@@ -193,7 +193,7 @@
                     </div>
                 </li>
               </ul>
-            </div>
+            <!-- </div> -->
           </div>
         </nav>
 
