--- a/users/static/users/css/client.css
+++ b/users/static/users/css/client.css
@@ -87,6 +87,11 @@
     font-size: 1.7rem;
 }
 
+.main-content {
+    padding-left: 250px;  /* Adjust to the width of your sidebar*/
+    width: 100%;
+}
+
 /* Sidebar Styles */
 .sidebar {
     background: #003366;
@@ -94,7 +99,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    transform: translateX(-100%); /* Hidden by default on small screens */
+    transform: none; /* Always visible */
     transition: transform 0.3s ease-in-out;
     z-index: 1040; /* Ensure it’s above other elements */
 }
@@ -115,18 +120,18 @@
 }
 
 .sidebar-body {
-    padding: 10px;
+    padding: 0 15px;
 }
 
   
-@media (min-width: 768px) {
+@media (max-width: 768px) {
     .main-content {
-        padding-left: 250px;  /* Adjust to the width of your sidebar*/
+        padding-left: 0;  /* Adjust to the width of your sidebar*/
         width: 100%;
     }
 
     .sidebar {
-        transform: none; /* Always visible */
-        position: fixed;
+        transform: translateX(-100%); /* Hidden by default on small screens */
+        width: 80vw;
     }
 }
