realign the items to display properly on small screen

--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -2,7 +2,7 @@
     <section>
         <div class="container">
             <section class="row gy-4">
-                <di class="col-12 col-md-4">
+                <di class="col-12 col-sm-6 col-lg-4">
                     <a class="d-flex summary shadow-sm">
                         <i class="bi bi-graph-up-arrow"></i>
                         <div class="ps-4">
@@ -11,7 +11,7 @@
                         </div>
                     </a>
                 </di>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <a href="" class="d-flex summary shadow-sm">
                         <i class="bi bi-briefcase"></i>
                         <div class="ps-4">
@@ -20,7 +20,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <a href="#" class="d-flex summary shadow-sm">
                         <i class="bi bi-coin"></i>
                         <div class="ps-4">
@@ -30,7 +30,7 @@
                     </a>
                 </div>
 
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <a href="#" class="d-flex summary shadow-sm">
                         <i class="bi bi-people"></i>
                         <div class="ps-4">
@@ -40,7 +40,7 @@
                     </a>
                 </div>
 
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <a href="#" class="d-flex summary shadow-sm">
                         <i class="bi bi-wallet2"></i>
                         <div class="ps-4">
@@ -50,7 +50,7 @@
                     </a>
                 </div>
 
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <a href="#" class="d-flex summary shadow-sm">
                         <i class="bi bi-currency-bitcoin"></i>
                         <div class="ps-4">
@@ -62,7 +62,7 @@
             </section>
 
             <section class="row pt-5 g-5">
-                <div class="col-12 col-md-5">
+                <div class="col-12 col-lg-5">
                     <div class="p-4 bg-white rounded-2 shadow-lg">
                         <table class="table">
                             <tr>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-7">
+                <div class="col-12 col-lg-7">
                     <div>
                         <h3>Active Investment</h3>
 
