Adjust my form to center

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -53,9 +53,9 @@
           <a class="navbar-brand text-center" href="/">
               <img
               src="{% static 'images/logo.PNG' %}"
-              alt="Riaz Wealth"    
-              style="margin: auto; height: 100px; width: 100%; object-fit: cover;"
-              class="d-inline-block align-center img-fluid"
+                alt="Riaz Wealth"    
+                style="margin: auto; height: 150px; width: 300px; object-fit: cover;"
+                class="d-inline-block align-center img-fluid"
               />
           </a>
           {% block sidebar %}
@@ -167,7 +167,7 @@
           <div class="container-fluid">
             <!-- Sidebar Off-Canvas -->
             <button 
-              class="btn toggler" 
+              class="btn toggler d-md-none" 
               type="button" 
               onclick="toggleSidebar()"
             >
