adjust the content padding

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -201,7 +201,7 @@
         <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 
         <!-- Main Content Area -->
-        <div class="tab-content p-5" id="sidebarTabsContent">
+        <div class="tab-content p-2 p-lg-5" id="sidebarTabsContent">
             {% for message in messages %}
               <script>
                       alertify.set('notifier','position', 'top-right');
