--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -3,7 +3,7 @@
 <section>
     <div class="container">
         <section class="row g-4">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-lg-6">
                 <legend class="text-center pb-4">
                     <h3>Request Withdrawals</h3>
                 </legend>
@@ -13,8 +13,8 @@
                 </form>
             </div>
 
-            <div class="col-12 col-md-6">
-                <div class="p-3 bg-white">
+            <div class="col-12 col-lg-6">
+                <div class="p-3 bg-white table-responsive">
                     <table class="table table-striped table-hover">
                         <tr>
                             <td>
@@ -67,7 +67,7 @@
 
         <!-- === Withdrawals Histories === -->
          <section class="row pt-5">
-            <div class="col-12">
+            <div class="col-12 table-responsive">
                 <table class="table mt-4 table-hover">
                     <thead class="bg-light">
                         <tr>
