--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="tab-pane fade show active" id="content-dashboard" role="tabpanel" aria-labelledby="tab-home">
